<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lemon95_main_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/lemon95_main_top"
    android:paddingLeft="@dimen/lemon95_main_left"
    android:paddingRight="@dimen/lemon95_main_left"
    android:paddingTop="@dimen/lemon95_main_top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/lemon95_distance_30"
            android:layout_marginRight="@dimen/lemon95_distance_30"
            android:layout_gravity="center_vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/lemon95_user_logo"
                    android:layout_height="@dimen/lemon95_user_logo"
                    android:src="@drawable/lemon_user_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/lemon95_distance_10"
                    android:text="@string/lemon95_login_msg"
                    android:textColor="@color/lemon_color1"
                    android:textSize="@dimen/lemon95_text_30" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <Button
                    android:layout_width="@dimen/lemon95_search_width"
                    android:layout_height="@dimen/lemon95_search_height"
                    android:background="@drawable/lemon_bug_search_bg"
                    android:drawableRight="@drawable/lemon_search"
                    android:drawablePadding="@dimen/lemon95_distance_7"
                    android:paddingLeft="@dimen/lemon95_search_left"
                    android:paddingRight="@dimen/lemon95_search_left"
                    android:text="@string/lemon95_search"
                    android:textColor="@color/lemon_color2"
                    android:textSize="@dimen/lemon95_text_20" />

                <TextClock
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/lemon95_distance_15"
                    android:fontFamily="sans-serif-light"
                    android:format12Hour="hh:mm"
                    android:format24Hour="HH:mm"
                    android:textColor="@color/lemon_color2"
                    android:textSize="@dimen/lemon95_text_24"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lemon95_menu1"
                    android:textColor="@color/lemon_color2"
                    android:textSize="@dimen/lemon95_text_30" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lemon95_menu2"
                    android:textColor="@color/lemon_color2"
                    android:textSize="@dimen/lemon95_text_30" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lemon95_menu3"
                    android:textColor="@color/lemon_color2"
                    android:textSize="@dimen/lemon95_text_30" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lemon95_menu4"
                    android:textColor="@color/lemon_color2"
                    android:textSize="@dimen/lemon95_text_30" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/lemon95_distance_30"
            android:layout_marginRight="@dimen/lemon95_distance_30">

            <fragment
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:name="com.lemon95.ymtv.view.fragment.UserFragment"/>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/lemon95_distance_15"
            android:layout_marginRight="@dimen/lemon95_distance_30">

            <ImageView
                android:layout_width="@dimen/lemon95_logo_width"
                android:layout_height="@dimen/lemon95_logo_height"
                android:src="@drawable/lemon_logo"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:scaleType="fitXY"/>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
