<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lemon95.ymtv.view.fragment.UserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/lemon95_distance_15"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/lemon_play_re_bg" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/lemon95_distance_110"
                        android:layout_height="@dimen/lemon95_distance_100"
                        android:src="@drawable/lemon_play_re" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lemon95_play_re"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/lemon_color3"
                        android:textSize="@dimen/lemon95_text_24"/>
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/lemon95_distance_7"
            android:layout_marginRight="@dimen/lemon95_distance_7"
            android:orientation="vertical"
            android:layout_weight="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/lemon_qp_bg" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/lemon95_distance_110"
                            android:layout_height="@dimen/lemon95_distance_100"
                            android:src="@drawable/lemon_qp_img" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lemon95_qp"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/lemon_color3"
                            android:textSize="@dimen/lemon95_text_24"/>
                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/lemon95_distance_7"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/lemon_sc_bg" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/lemon95_distance_110"
                            android:layout_height="@dimen/lemon95_distance_100"
                            android:src="@drawable/lemon_sc_img" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lemon95_sc"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/lemon_color3"
                            android:textSize="@dimen/lemon95_text_24"/>
                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/lemon_paly_bg" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/lemon95_distance_110"
                        android:layout_height="@dimen/lemon95_distance_100"
                        android:src="@drawable/lemon_user_msg" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lemon95_user_msg"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/lemon_color3"
                        android:textSize="@dimen/lemon95_text_24"/>
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>


</FrameLayout>
